1. put top alert a bit down to prevent navbar overlap 2. Make settings nav-pills dim in dark theme 3. Larger font for paperlists at bookmark page

--- a/app/static/src/less/layout.less
+++ b/app/static/src/less/layout.less
@@ -58,7 +58,7 @@ body {
 
 .top-alert {
   position: fixed;
-  top: 0;
+  top: 70;
   left: 0;
   width: 100%;
   z-index: 999;
@@ -69,11 +69,16 @@ body {
   color: var(--btn-primary-color);
   background-color: var(--btn-primary-bg-color);
   border-color: var(--btn-primary-border-color);
-  &:hover, &:focus {
+  &:hover,
+  &:focus {
     color: var(--btn-primary-color-hover) !important;
     background-color: var(--btn-primary-bg-color-hover) !important;
     border-color: var(--btn-primary-border-color-hover) !important;
   }
+}
+
+.nav-pills .nav-link.active{
+  background-color: var(--navlink-bg-color) !important;
 }
 
 /* ---------- Menu ---------- */
@@ -105,6 +110,17 @@ body {
 
     &:hover {
       color: var(--menu_item_hover_color);
+    }
+  }
+}
+
+.menu-item-bm {
+  a {
+    font-size: 1.2rem;
+    color: var(--bm-item-color);
+    text-decoration: none;
+    &:hover {
+      color: var(--bm-item-hover-color);
     }
   }
 }
