--- a/app/static/src/less/vars.less
+++ b/app/static/src/less/vars.less
@@ -13,6 +13,10 @@
   --menu_content_bg: #fff;
   --menu_item_color: #666;
   --menu_item_hover_color: #222;
+  --bm-item-color: #444;
+  --bm-item-hover-color: #000;
+
+  --navlink-bg-color: #007bff;
   // tag color
   --tag_panel_color: #000;
 
